# learning-ml

./: .env  .gitignore  Technical.md  UnderstandingML.md  main.py  pyproject.toml
000clgml/: test.ipynb
01_Data-Collection/day15 - working with csv files/: pandas_onbadlines_dataset.csv  working-with-csv.ipynb
01_Data-Collection/day16 - working-with-json-and-sql/: day16.ipynb
01_Data-Collection/day17-api-to-dataframe/: day17.ipynb
01_Data-Collection/day18-pandas-dataframe-using-web-scraping/: day18.ipynb  index.html
02_Data-Analysis/day19-understanding-your-data-descriptive-stats/: day19.ipynb
02_Data-Analysis/day20-univariate-analysis/: day20.ipynb
02_Data-Analysis/day21-bivariate-analysis/: day21.ipynb
02_Data-Analysis/day22-pandas-profiling/: day22.ipynb  report.html
