[project]
name = "100-days-of-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "dtale>=3.22.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mysql-connector-python>=9.7.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pandas-profiling>=3.0.0",
    "playwright>=1.60.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sweetviz>=2.3.3",
]
